--- a/KPP_lab3/lab3/pom.xml
+++ b/KPP_lab3/lab3/pom.xml
@@ -12,6 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     <maven.compiler.source>23</maven.compiler.source>
+    <maven.compiler.target>23</maven.compiler.target>
+    <java.version>23</java.version>
   </properties>
 
   <dependencies>
@@ -69,8 +72,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>23</source>
+          <target>23</target>
         </configuration>
       </plugin>
     </plugins>
